# pelican-blog

./: LICENSE  README  README.md  pelicanconf.py  pyproject.toml  requirements.txt  tasks.py
content/: hello-world.md
content/blog/: hello-world.md  kubernetes.md  learning.md  ogr2ogr.md  python-pyenv-poetry.md  vim-tricks.md
content/pages/: about.md  home.md
templates/hyde/static/css/: fontello.css  hyde.css
templates/hyde/static/font/: fontello.eot
templates/hyde/templates/: article.html  base.html  footer.html  index.html  sidebar.html
