[tool.poetry]
name = "pelican-blog"
version = "1.0.0"
description = "ropable.com static site generator project"
authors = ["Ashley Felton <ashley@ropable.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pelican = "^4.1.0"
Markdown = "^3.1.1"
typogrify = "^2.0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
