[tool.poetry]
name = "pelican-blog"
version = "1.1.1"
description = "ropable.com static site generator project"
authors = ["Ashley Felton <ashley@ropable.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pelican = "4.9.1"
markdown = "3.5.2"
typogrify = "2.0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
